--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Successful step
-        run: 
+        run: |
           echo "I will succeed"
           exit 0
       - name: Say goodbye
