--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -14,9 +14,9 @@ jobs:
   echo-goodbye:
     runs-on: ubuntu-latest
     steps:
-      - name: Successful step
+      - name: Failed step
         run: |
-          echo "I will succeed"
-          exit 0
+          echo "I will fail"
+          exit 1
       - name: Say goodbye
         run: echo "Goodbye!"
