--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -3,7 +3,12 @@
 
 name: 02 - Workflow Events
 
-on: [ push, workflow_dispatch ]
+on: 
+    push:
+    workflow_dispatch:
+    pull_request:
+    schedule:
+        - cron: '*/5 * * * *'
 
 jobs:
     echo:
