--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -4,11 +4,11 @@
 name: 02 - Workflow Events
 
 on: 
-    push:
+    # push:
     workflow_dispatch:
     pull_request:
-    schedule:
-        - cron: '*/5 * * * *'
+    # schedule:
+    #     - cron: '*/5 * * * *'     # documentation says runs every 5 min but it's really every 15 min.
 
 jobs:
     echo:
