--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -8,16 +8,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Show OS
-              run: echo "This job is running ${{ GitHub.OS }}"
+              run: echo "This job is running $RUNNER_OS"
     windows-echo:
         runs-on: windows-latest
         steps:
             - name: Show OS
               shell: bash
-              run: echo "This job is running ${{ GitHub.OS }}"
+              run: echo "This job is running $RUNNER_OS"
     mac-echo:
         runs-on: macos-latest
         steps:
             - name: Show OS
-              run: echo "This job is running ${{ GitHub.OS }}"
+              run: echo "This job is running $RUNNER_OS"
         
