--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -9,6 +9,6 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Code
-              run: actions/checkoutv4
+              run: actions/checkout@v4
             - name: Printing Folders
               run: ls
