--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -8,7 +8,8 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
             - name: Checkout Code
-              run: actions/checkout@v4
+              run: ls
             - name: Printing Folders
               run: ls
