--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -1,3 +1,5 @@
+# See 04-using-actions/README.md for more information
+# about using actions within workflows.
 
 name: 04 - Using Actions
 
@@ -8,8 +10,15 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v4
             - name: Checkout Code
-              run: ls
-            - name: Printing Folders
-              run: ls
+              uses: actions/checkout@v4
+            - name: Setup Node
+              uses: actions/setup-node@v4
+              with:
+                node-version: '20.x'
+            - name: Install Dependencies
+              run: |
+                cd 04-using-actions
+                npm ci
+            - name: Run Unit Tests
+              run: npm run test
