--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -18,9 +18,9 @@ jobs:
                 node-version: '20.x'
             - name: Install Dependencies
               run: |
-                cd 04-using-actions
+                cd 04-using-actions/react-app
                 npm ci
             - name: Run Unit Tests
               run: |
-                cd 04-using-actions
+                cd 04-using-actions/react-app
                 npm run test
