--- a/.github/workflows/02-workflow-events.yaml
+++ b/.github/workflows/02-workflow-events.yaml
@@ -6,7 +6,7 @@ name: 02 - Workflow Events
 on: 
     # push:
     workflow_dispatch:
-    pull_request:
+    # pull_request:
     # schedule:
     #     - cron: '*/5 * * * *'     # documentation says runs every 5 min but it's really every 15 min.
 
