1st fix for 06-contexts

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -12,13 +12,13 @@ jobs:
         steps:
             - name: Display Information
               run: |
-                echo "Event name: {{ $GITHUB.event_name }}"
-                echo "Ref: {{ $GITHUB.Ref }} "
-                echo "SHA: {{ $GITHUB.SHA }}"
-                echo "Actor: {{ $GITHUB.Actor }}"
-                echo "Workflow: {{ $GITHUB.workflow }}"
-                echo "Run ID: {{ $GITHUB.ID }}"
-                echo "Run number: {{ $GITHUB.number }}"
+                echo "Event name: ${{ GITHUB.event_name }}"
+                echo "Ref: ${{ GITHUB.Ref }} "
+                echo "SHA: ${{ GITHUB.SHA }}"
+                echo "Actor: ${{ GITHUB.Actor }}"
+                echo "Workflow: ${{ GITHUB.workflow }}"
+                echo "Run ID: ${{ GITHUB.ID }}"
+                echo "Run number: ${{ GITHUB.number }}"
             - name: Retrieve Variable
               run: |
                 echo "My_Var ${{ vars.MY_VAR }}"
