--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,7 +1,7 @@
 
 
 name: 06 - Contexts
-run-name: My custom workflow run name - $RUNNER_OS
+run-name: "My custom workflow run name - $RUNNER_OS
 
 on:
     push:
