--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,11 +1,15 @@
 
 
 name: 06 - Contexts
-run-name: "My custom workflow run name - $RUNNER_OS"
+run-name: 06 - Contexts | DEBUG - ${{ inputs.debug }}
 
 on:
     push:
     workflow_dispatch: 
+        inputs:
+            debug:
+                type: boolean
+                default: false
 
 jobs:
     echo-data:
