--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -10,9 +10,15 @@ on:
             debug:
                 type: boolean
                 default: false
+env:
+  MY_WORKFLOW_VAR: 'workflow'
+  MY_OVERWRITTEN_VAR: 'workflow'
 
 jobs:
     echo-data:
+        env:
+            MY_JOB_VAR: 'workflow'
+            MY_OVERWRITTEN_VAR: 'job'
         runs-on: ubuntu-latest
         steps:
             - name: Display Information
@@ -24,6 +30,18 @@ jobs:
                 echo "Workflow: ${{ GITHUB.workflow }}"
                 echo "Run ID: ${{ GITHUB.ID }}"
                 echo "Run number: ${{ GITHUB.number }}"
+                echo "MY_JOB_VAR: ${{ env.MY_JOB_VAR }}"
+                echo "MY_OVERWRITTEN_VAR: ${{ env.MY_OVERWRITTEN_VAR }}"
             - name: Retrieve Variable
               run: |
                 echo "My_Var ${{ vars.MY_VAR }}"
+            - name: Print Env Variables
+              env: 
+                MY_OVERWRITTEN_VAR: 'step'
+              run: |
+                echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
+                echo "MY_OVERWRITTEN_VAR: ${{ env.MY_OVERWRITTEN_VAR }}"
+            - name: Print Env Variables
+              run: |
+                echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
+                echo "MY_OVERWRITTEN_VAR: ${{ env.MY_OVERWRITTEN_VAR }}"
