--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,5 @@
-
-
 name: 06 - Contexts
+
 run-name: 06 - Contexts | DEBUG - ${{ inputs.debug }}
 
 on:
@@ -45,3 +44,10 @@ jobs:
               run: |
                 echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
                 echo "MY_OVERWRITTEN_VAR: ${{ env.MY_OVERWRITTEN_VAR }}"
+    echo-data2:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Print Env Variables
+          run: |
+                echo "Workflow env: $MY_WORKFLOW_VAR"
+                echo "MY_OVERWRITTEN_VAR: $MY_OVERWRITTEN_VAR"
