--- a/.github/workflows/07-Work-with-Expressions.yaml
+++ b/.github/workflows/07-Work-with-Expressions.yaml
@@ -1,6 +1,6 @@
 name: 07-Working-with-expressions
 
-run-name: 07 - Working with expressions [Debug: ${{inputs.debug }}]
+run-name: 07 - Expressions | DEBUG - ${{ inputs.debug }}
 
 on:
     push:
