--- a/.github/workflows/07-Work-with-Expressions.yaml
+++ b/.github/workflows/07-Work-with-Expressions.yaml
@@ -18,16 +18,16 @@ jobs:
             if: ${{ inputs.debug }} == 'true'
             run: |
               echo "Triggered by: ${{ GitHub.event }}"
-              echo "Branch: ${{ GitHub.Branch }}"
+              echo "Branch: ${{ GitHub.ref_name }}"
               echo "Commit SHA: ${{ GitHub.SHA}}"
-              echo "Runner OS: $RunnerOS"
+              echo "Runner OS: $Runner_OS"
           - name: 'Print start-up data triggered from main [debug]'
-            if: ${{ inputs.debug }} == 'true' && ${{ GitHub.Branch}} == 'main'
+            if: ${{ inputs.debug }} == 'true' && ${{ GitHub.ref_name}} == 'main'
             run: |
               echo "Triggered by: ${{ GitHub.event }}"
-              echo "Branch: ${{ GitHub.Branch }}"
+              echo "Branch: ${{ GitHub.ref_name }}"
               echo "Commit SHA: ${{ GitHub.SHA}}"
-              echo "Runner OS: ${{ GitHub.OS }}"
+              echo "Runner OS: $Runner_OS"
           - name: Greetings
             run: |
               echo "Hello world!!!"
