08-Context: invalid context

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,6 @@
 name: 06 - Contexts
 
-run-name: 06 - Contexts | DEBUG - ${{ inputs.debug }}
+run-name: 06 - Contexts | DEBUG - ${{ runner.OS }}
 
 on:
     # push:
