07-Expressions: add conditional run-name

--- a/.github/workflows/07-Work-with-Expressions.yaml
+++ b/.github/workflows/07-Work-with-Expressions.yaml
@@ -1,6 +1,7 @@
 name: 07-Working-with-expressions
 
-run-name: 07 - Expressions | DEBUG - ${{ inputs.debug }}
+
+run-name: 07 - Expressions | DEBUG - < ${{ inputs.debug && 'ON' || 'OFF' }}
 
 on:
     push:
