remove push trigger

--- a/.github/workflows/07-Work-with-Expressions.yaml
+++ b/.github/workflows/07-Work-with-Expressions.yaml
@@ -4,7 +4,7 @@ name: 07-Working-with-expressions
 run-name: 07 - Expressions | DEBUG - < ${{ inputs.debug && 'ON' || 'OFF' }}
 
 on:
-    push:
+    #push:
     workflow_dispatch: 
         inputs:
             debug:
